objects/Apex_Batch_Job__c.object
<CustomObject>
    <fields>
        <fullName>Date_TimeStamp__c</fullName>
        <description>Used for Opty Share</description>
        <label>Date_TimeStamp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Minutes__c</fullName>
        <label>Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NotificationEmailId__c</fullName>
        <label>NotificationEmailId</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TimeStamp__c</fullName>
        <description>Used for OptyShare class</description>
        <label>TimeStamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>query1__c</fullName>
        <label>query1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>query__c</fullName>
        <label>query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <description>Used to store the query and notification email id for batch process.</description>
    <label>Apex Batch Job</label>
</CustomObject>